--- a/css/theme.css
+++ b/css/theme.css
@@ -413,6 +413,26 @@ div#primary.show-sidebar main#main div.blog-content aside.widget-area .widget_de
   color: #62585f;
   font-weight: normal;
 }
+div#primary.show-sidebar main#main div.blog-content aside.widget-area .widget_designfly_twitter_widget .widget-title {
+  display: flex;
+  justify-content: space-between;
+}
+div#primary.show-sidebar main#main div.blog-content aside.widget-area .widget_designfly_twitter_widget .widget-title button.twitter-follow-button {
+  text-shadow: none;
+  color: initial;
+  padding: 0.2em 0.5em;
+  font-size: 13px;
+  position: relative;
+  top: -3px;
+  line-height: 1.3;
+  font-weight: bold;
+}
+div#primary.show-sidebar main#main div.blog-content aside.widget-area .widget_designfly_twitter_widget .widget-title button.twitter-follow-button span.dashicons {
+  color: #1da1f2;
+  line-height: unset;
+  vertical-align: sub;
+  font-size: 15px;
+}
 div#primary.show-sidebar main#main div.blog-content aside.widget-area .widget_designfly_twitter_widget div.designfly-tweet-block div.designfly-tweet-block-header {
   width: 100%;
   display: flex;
