--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -87,7 +87,7 @@ div#primary.show-sidebar {
 
             header.entry-header {
               width: 100%;
-              height: 50px;
+              height: auto;
               background-color: #222;
               display: flex;
               font-family: vars.$font-family;
@@ -108,7 +108,8 @@ div#primary.show-sidebar {
                 padding: 0.4em 0.9em;
                 border-right: 1px solid rgba($color: #fff, $alpha: 0.7);
                 width: fit-content;
-                height: inherit;
+                height: auto;
+                line-height: 1;
 
                 span.post-day {
                   margin: 0;
@@ -127,7 +128,7 @@ div#primary.show-sidebar {
                   display: inline-block;
                   line-height: 1;
                   position: relative;
-                  top: -0.55em;
+                  top: -0.25em;
                 }
               }
             }
@@ -944,6 +945,10 @@ div#portfolio-modal {
             grid-row-gap: 2em !important;
 
             article {
+              span.entry-meta {
+                padding: 0.8em 0.9em !important;
+              }
+
               div.entry-content {
                 display: block !important;
 
