--- a/css/theme.css
+++ b/css/theme.css
@@ -932,5 +932,24 @@ div#portfolio-modal {
     width: 90% !important;
   }
 }
+#screenFiller {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+#offlineText {
+  padding: 0.5em 1em;
+  display: none;
+  width: 100%;
+  background-color: red;
+  color: #fff;
+  position: fixed;
+  bottom: 0;
+  cursor: pointer;
+  z-index: 9999;
+}
 
 /*# sourceMappingURL=theme.css.map */
